Modified the files

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                                 <span class="display-no" id="second">00</span>
 
                                 <div class="label">
-                                    <span>Minute</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span>Second</span>
+                                    <span>Minutes</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span>Seconds</span>
                                 </div>
                             </center>
                         </div>
